subtext alignment fixed

--- a/src/css/ChoicePage.css
+++ b/src/css/ChoicePage.css
@@ -32,7 +32,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 20px;
-    margin-top: 5%;
+    margin-top: 2%;
 }
 
 .assessment .input::placeholder{
@@ -57,6 +57,7 @@
     } 
     .input-age h5{
         margin-top: 0%;
+        line-height: 24px;
     }
     .assessment .input{
         margin-top: 0%;
@@ -72,6 +73,6 @@
 
 @media only screen and (min-width: 480px){
     .assessment .input-age{
-        margin-top: 30px;
+        margin-top: 0px;
     } 
 }
