--- a/src/css/ProceedTemplate.css
+++ b/src/css/ProceedTemplate.css
@@ -1,6 +1,6 @@
 .proceed-container{
     display: flex;
-    margin-top: 4%;
+    margin-top: 3%;
 }
 
 .back-button{
